feat: updated and fixed the following (chat function, edit profile, profile)